# python-loader

./: .gitignore  LICENSE  README.md  __init__.py  cells3D_fury.py  pyMCDS.py  pyMCDS_cells.py  pyMCDS_timeseries.py  pyproject.toml  read_MultiCellDS_xml.py  requirements.txt  setup.cfg  setup.py  test_single.py  test_timeseries.py
.github/workflows/: apple.yml  linux.yml  python-package.yml  windows.yml
man/: HOWTO.md  HOWTO_3.2.14.md  REFERENCE.md  REFERENCE_3.2.13.md  REFERENCE_3.2.14.md  TUTORIAL.md  TUTORIAL_3.2.13.md  TUTORIAL_3.2.14.md  TUTORIAL_blender.md  TUTORIAL_commandline.md  TUTORIAL_fiji_imagej.md  TUTORIAL_fijiimagej.md  TUTORIAL_introduction.md  TUTORIAL_julia.md  TUTORIAL_matlab_octave.md  TUTORIAL_neuroglancer.md  TUTORIAL_paraview.md  TUTORIAL_python3.md  TUTORIAL_python3_graph.md  TUTORIAL_python3_json.md  TUTORIAL_python3_matplotlib.md  TUTORIAL_python3_napari.md  TUTORIAL_python3_ometiff.md  TUTORIAL_python3_pandas.md  TUTORIAL_python3_scverse.md  TUTORIAL_python3_timeseries.md  TUTORIAL_python3_timestep.md  TUTORIAL_python3_vtk.md  TUTORIAL_r.md  scarab.py
man/docstring/: mcds.__init__.md  mcds.get_anndata.md  mcds.get_attached_graph_dict.md  mcds.get_cell_attribute_list.md  mcds.get_cell_df.md  mcds.get_cell_df_at.md  mcds.get_cell_variables.md  mcds.get_celltype_dict.md  mcds.get_celltype_list.md  mcds.get_conc_df.md  mcds.get_concentration.md  mcds.get_concentration_at.md  mcds.get_mesh.md  mcds.get_mesh_2D.md  mcds.get_mesh_coordinate.md  mcds.get_mesh_mnp.md  mcds.get_mesh_mnp_axis.md  mcds.get_mesh_mnp_range.md  mcds.get_mesh_spacing.md  mcds.get_multicellds_version.md  mcds.get_neighbor_graph_dict.md  mcds.get_parameter_dict.md  mcds.get_physicell_version.md  mcds.get_rule_df.md  mcds.get_runtime.md  mcds.get_spatialdata.md  mcds.get_spring_graph_dict.md  mcds.get_substrate_df.md  mcds.get_substrate_dict.md  mcds.get_substrate_list.md  mcds.get_substrate_names.md  mcds.get_time.md  mcds.get_timestamp.md  mcds.get_unit_dict.md  mcds.get_unit_se.md  mcds.get_voxel_ijk.md  mcds.get_voxel_ijk_axis.md  mcds.get_voxel_ijk_range.md  mcds.get_voxel_spacing.md  mcds.get_voxel_volume.md  (+70 more)
man/jupyter/: pcdl_repl_programming.ipynb  pcdl_ws2023.ipynb
matlab_example/: citation and license.txt  output00003696.xml
pcDataLoader/: AnnData.py  __init__.py  annD.py  pyMCDS.py  pyMCDS_timeseries.py  pyMCDS_ts.py  pyMCDSts.py  read_MultiCellDS_xml.py
pcDataLoader/data_timeseries/: initial.xml  output00000000_cells_physicell.mat  output00000003.xml  output00000003_cells_physicell.mat  output00000003_microenvironment0.mat  output00000004_cells.mat  output00000005_microenvironment0.mat  output00000008_cells_physicell.mat  output00000011.xml  output00000011_cells.mat  output00000012_cells.mat  output00000012_microenvironment0.mat  output00000013.xml  output00000013_cells.mat  output00000014_cells_physicell.mat  output00000014_microenvironment0.mat  output00000015_cells.mat  output00000016.xml  output00000019_cells.mat  output00000019_cells_physicell.mat  output00000020_cells.mat  output00000021_cells.mat  output00000022_cells.mat  output00000022_microenvironment0.mat  output00000023.xml  output00000024_cells_physicell.mat  output00000025_cells.mat  output00000025_microenvironment0.mat  output00000027.xml  output00000028_microenvironment0.mat  output00000029_cells.mat  output00000029_cells_physicell.mat  output00000031_cells.mat  output00000034.xml  output00000034_microenvironment0.mat  output00000035_cells_physicell.mat  output00000036.xml  output00000039_cells.mat  (+96 more)
pcdataloader/: pdplt.py  pyMCDS.py  pyMCDSts.py
pcdl/: __init__.py  commandline.py  data_timeseries.py  galaxy.sh  imagine.py  neuromancer.py  ometiff2neuro.py  output_data.py  output_h5ad.txt  output_raw.txt  pcdl_get_anndata.xml  pcdl_get_cell_attribute.xml  pcdl_get_cell_attribute_list.xml  pcdl_get_cell_df.xml  pcdl_get_celltype_list.xml  pcdl_get_conc_attribute.xml  pcdl_get_conc_df.xml  pcdl_get_substrate_list.xml  pcdl_get_unit_dict.xml  pcdl_get_version.xml  pcdl_make_cell_vtk.xml  pcdl_make_conc_vtk.xml  pcdl_make_gif.xml  pcdl_make_graph_gml.xml  pcdl_make_movie.xml  pcdl_plot_contour.xml  pcdl_plot_scatter.xml  pcdl_plot_timeseries.xml  pdplt.py  pyAnnData.py  pyCLI.py  pyMCDS.py  pyMCDS_timeseries.py  pyMCDSts.py  read_MultiCellDS_xml.py  test-data  timeseries.py  timestep.py
physicellloader/: __init__.py
plotting/: anim_svg.py  anim_svg_cycle.py  anim_svg_substrate.py  cells3D_fury.py
single_set/: output00000001.xml  output00000001_cells.mat
test/: test_anndata_2d.py  test_anndata_3d.py  test_cli_2d.py  test_commandline_2d.py  test_single.py  test_snapshot.py  test_snapshot_2d.py  test_snapshot_3d.py  test_snapshot_3d_microenvfalse.py  test_timeseries.py  test_timeseries_2d.py  test_timeseries_3d.py  test_timeseries_ffmpeg.py  test_timeseries_magick.py  test_timestep_2d.py  test_timestep_3d.py  test_timestep_3d_microenvfalse.py
timeseries_set/: config.xml  final.xml  final_cells.mat  final_cells_physicell.mat  final_microenvironment0.mat  initial_microenvironment0.mat  output00000000.xml  output00000000_cells.mat  output00000001.xml  output00000001_microenvironment0.mat  output00000002.xml  output00000002_cells_physicell.mat  output00000002_microenvironment0.mat  output00000003_cells.mat  output00000004_cells_physicell.mat  output00000005.xml  output00000005_cells_physicell.mat  output00000006_cells.mat  output00000006_cells_physicell.mat  output00000006_microenvironment0.mat  output00000007.xml  output00000007_cells.mat  output00000007_cells_physicell.mat  output00000007_microenvironment0.mat  output00000008.xml  output00000008_cells.mat  output00000008_microenvironment0.mat  output00000009.xml  output00000009_cells.mat  output00000010.xml  output00000010_cells.mat  output00000010_cells_physicell.mat  output00000010_microenvironment0.mat  output00000011_cells_physicell.mat  output00000011_microenvironment0.mat  output00000013_cells_physicell.mat  output00000013_microenvironment0.mat  output00000014.xml  output00000014_cells.mat  output00000015_cells_physicell.mat  (+204 more)
(+368 files in other folders)
