#####
# A setuptools based setup module.
#
# See:
# https://packaging.python.org/en/latest/tutorials/packaging-projects/
# https://packaging.python.org/guides/distributing-packages-using-setuptools/
# https://github.com/pypa/sampleproject
#
# releasing a next version on pypi:
# 0. increase version number in this pyproject.toml file
# 1. git add pyproject.toml
# 2. git commit -m'@ physicelldataloader : next release.'
# 3. git tag -a v0.0.0 -m'version 0.0.0'
# 4. rm -r dist pcdl.egg-info
# 5. python3 -m build --sdist  # make source distribution
# 6. python3 -m build --wheel  # make binary distribution python wheel
# 7. twine upload dist/* --verbose
# 8. git push origin master
# 9. git push --tag
#####

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
# name of the project
# pip install pcdl
# import pcdl
name = "pcdl"  # Required
version = "3.1.3" # Required

description = "physicell data loader (pcdl) provides a platform independent, python3 based, pip installable interface to load output, generated with the PhysiCell agent based modeling framework, into python3."  # Optional
readme = "README.md"

requires-python = ">=3.6, <4"

license = "BSD-3-Clause"
#license-files = {paths = ["LICENSE"]}

authors = [
  {name="Elmar Bucher", email="epbucher@iu.edu"} # Optional
]
maintainers = [
  {name="Elmar Bucher", email="epbucher@iu.edu"} # Optional
]

keywords = [
    "analysis",
    "data",
    "physicell",
    "python3",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

dependencies = [
    "matplotlib",
    "numpy",
    "pandas",
    "scipy",
]

[project.urls]
"Homepage lab" = "http://www.mathcancer.org/"
"Homepage project" = "http://physicell.org/"
Hompage = "https://github.com/elmbeech/physicelldataloader"
Documentation = "https://github.com/elmbeech/physicelldataloader/tree/master/man"
Issues = "https://github.com/elmbeech/physicelldataloader/issues"
Source = "https://github.com/elmbeech/physicelldataloader"

#[tool.hatch.build.targets.sdist]
#include = [
#    "/pcdl",
#]

# setuptool
#[tool.setuptools.packages.find]
#include = ["pcdl"]
#exclude = ["man"]

# This is configuration specific to the `setuptools` build backend.
# If you are using a different build backend, you will need to change this.
#[tool.setuptools]
# If there are data files included in your packages that need to be
# installed, specify them here.
#package-data = {"pcdl"=[
#    "data_timeseries_2d/*.mat",
#    "data_timeseries_2d/*.svg",
#    "data_timeseries_2d/*.txt",
#    "data_timeseries_2d/*.xml",
#    "data_timeseries_3d/*.mat",
#    "data_timeseries_3d/*.svg",
#    "data_timeseries_3d/*.txt",
#    "data_timeseries_3d/*.xml",
#]}

