#####
# A hatchling based setup module.
#
# See:
# https://packaging.python.org/en/latest/
# https://packaging.python.org/en/latest/tutorials/packaging-projects/
# https://hatch.pypa.io/latest/
#
# releasing a next version on pypi:
# 0. vim pcdl/VERSION.py  # increase version number in file
# 1. git add pcdl/VERSION.py
# 2. git status
# 3. git commit -m'@ physicelldataloader : next release.'
# 4. git tag -a v0.0.0 -m'version 0.0.0'
# 5. rm -r dist
# 6. python3 -c "import pcdl; pcdl.uninstall_data()"
# 7. python3 -m build --sdist  # make source distribution
# 8. python3 -m build --wheel  # make binary distribution python wheel
# 9. twine upload dist/* --verbose
# 10. git push origin
# 11. git push --tag
#####


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
# name of the project
# pip install pcdl
# import pcdl
name = "pcdl"
dynamic = ["version"]

description = "physicell data loader (pcdl) provides a platform independent, python3 based, pip installable interface to load output, generated with the PhysiCell agent based modeling framework, into python3."
readme = "README.md"

requires-python = ">=3.8, <4"

license = "BSD-3-Clause"
#license-files = {paths = ["LICENSE"]}

authors = [
  {name="Elmar Bucher", email="epbucher@iu.edu"}
]
maintainers = [
  {name="Elmar Bucher", email="epbucher@iu.edu"}
]

keywords = [
    "analysis",
    "data",
    "physicell",
    "python3",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

dependencies = [
    "matplotlib",
    "numpy",
    "pandas",
    "scipy",
]

[project.scripts]
pcdl_get_cell_df = "pcdl.pyCLI:get_cell_df"
pcdl_get_cell_df_features = "pcdl.pyCLI:get_cell_df_features"
pcdl_get_conc_df = "pcdl.pyCLI:get_conc_df"
pcdl_get_conc_df_features = "pcdl.pyCLI:get_conc_df_features"
pcdl_get_graph_gml = "pcdl.pyCLI:get_graph_gml"
#pcdl_get_unit_se = "pcdl.pyCLI:get_unit_se"
pcdl_get_version = "pcdl.pyCLI:get_version"
pcdl_make_gif = "pcdl.pyCLI:pcdl_make_gif"
pcdl_make_movie = "pcdl.pyCLI:pcdl_make_movie"
pcdl_plot_contour = "pcdl.pyCLI:plot_contour"
pcdl_plot_scatter = "pcdl.pyCLI:plot_scatter"
pcdl_plot_timeseries = "pcdl.pyCLI:plot_timeseries"

[project.optional-dependencies]
data = [
    "requests",
]
scverse = [
    "anndata",
]
all = [
    "pcdl[data]",
    "pcdl[scverse]",
]

[project.urls]
"Homepage lab" = "http://www.mathcancer.org/"
"Homepage project" = "http://physicell.org/"
Hompage = "https://github.com/elmbeech/physicelldataloader"
Documentation = "https://github.com/elmbeech/physicelldataloader/tree/master/man"
Issues = "https://github.com/elmbeech/physicelldataloader/issues"
Source = "https://github.com/elmbeech/physicelldataloader"
#DOI = "https://"


[tool.hatch.version]
path = "pcdl/VERSION.py"


[tool.hatch.build.targets.sdist]
include = [
    "/man",
    "/pcdl",
    "/test",
]
exclude = [
    "/data_timeseries_2d.tar.gz",
    "/data_timeseries_3d.tar.gz",
    "/.pytest_cache",
]

